--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Rory McLaughlin",
   "license": "ISC",
   "dependencies": {
-    "ejs": "2.3.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.4"
   }
 }
