--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Rory McLaughlin",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^2.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.3.5"
   }
 }
