--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.3.5"
+    "mongoose": "^5.3.5",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-twitter": "^1.0.4"
   }
 }
