--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-twitter": "^1.0.4",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
-    "socket.io-redis": "^5.2.0"
+    "socket.io-redis": "^5.2.0",
+    "winston": "^3.1.0"
   }
 }
