Update gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-app/config/development.json
+# Node Dependencies
 node_modules
+
+# dev.json
+app/config/development.json
+
+# Environment files
 .env
